# Dot-Craft

./: README.md  build.bat  build.sh  dot-craft.spec  pyproject.toml
dotcraft/: __init__.py  __main__.py  application.py  core.py
tests/: test_main_func.py
