[project]
name = "dotcraft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pillow>=11.2.1",
    "tkinterdnd2>=0.4.3",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.14.2",
]
